tests/ui/parser/doc-before-extern-rbrace.stderr
error[E0584]: found a documentation comment that doesn't document anything
  --> $DIR/doc-before-extern-rbrace.rs:4:5
   |
LL |     /// hi
   |     ^^^^^^ this doc comment doesn't document anything
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0584`.
